--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -19,7 +19,8 @@ pwd
 
     stage('Run Artifact') {
       steps {
-      sh '''cd target
+      sh '''pwd
+      cd target
    java -jar AWSFin-1.0-SNAPSHOT-jar-with-dependencies.jar $Cluster $aws_access_key_id2 $aws_secret_access_key2 $region "$baseJson"
    '''
          }
