--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -29,10 +29,10 @@ pwd
   }}
    properties([
         parameters([
-      string(name: 'Cluster', defaultValue: 'ncp3-pvt', description: null)
-      string(name: 'aws_access_key_id', defaultValue: null, description: null)
-      string(name: 'aws_secret_access_key', defaultValue: null, description: null)
-      string(name: 'region', defaultValue: 'us-east-1', description: null)
+      string(name: 'Cluster', defaultValue: 'ncp3-pvt', description: null),
+      string(name: 'aws_access_key_id', defaultValue: null, description: null),
+      string(name: 'aws_secret_access_key', defaultValue: null, description: null),
+      string(name: 'region', defaultValue: 'us-east-1', description: null),
       text(name: 'baseJson', defaultValue: null, description: null)
         ])
 ])
