--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -21,7 +21,7 @@ pwd
       steps {
       sh '''pwd
       cd common/ECSResourcesCheck/target
-   java -jar AWSFin-1.0-SNAPSHOT-jar-with-dependencies.jar $Cluster $aws_access_key_id2 $aws_secret_access_key2 $region "$baseJson"
+   java -jar AWSFin-1.0-SNAPSHOT-jar-with-dependencies.jar params.Cluster params.aws_access_key_id2 params.aws_secret_access_key2 params.region "params.baseJson"
    '''
          }
 
