--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -30,8 +30,9 @@ pwd
       steps {
       sh '''pwd
       cd common/ECSResourcesCheck/target
-   java -jar AWSFin-1.0-SNAPSHOT-jar-with-dependencies.jar''' ${params.Cluster}''' '''${params.aws_access_key_id}''' '''${params.aws_secret_access_key}''' '''${params.region}''' '''${"params.baseJson"}'''
-   '''
+      echo ${params.Cluster}
+      echo '''${params.Cluster}'''
+    '''
          }
 
     }
