--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -26,13 +26,15 @@ pipeline {
 
     stage('Compare ECS clusters') {
       steps {
+          script{
+            def profile ='int'
+            def secretkey = sh([script: "aws configure get aws_secret_access_key --profile ${profile} | xargs echo -n", returnStdout: true])
+            def publickey = sh([script:"aws configure get aws_access_key_id --profile ${profile} | xargs echo -n",returnStdout: true])
+
           sh '''cd common/ECSResourcesCheck/target
-                      def profile ='int'
-                      def secretkey = sh([script: "aws configure get aws_secret_access_key --profile ${profile} | xargs echo -n", returnStdout: true])
-                      def publickey = sh([script:"aws configure get aws_access_key_id --profile ${profile} | xargs echo -n",returnStdout: true])
-            java -jar AWSFin-1.0-SNAPSHOT-jar-with-dependencies.jar ${Cluster} ${secretkey} ${publickey} ${region} "${baseJson}"
+                java -jar AWSFin-1.0-SNAPSHOT-jar-with-dependencies.jar ${Cluster} ${secretkey} ${publickey} ${region} "${baseJson}"
          '''
-         }
+         }}
 
     }
   }}
