--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -30,10 +30,9 @@ pipeline {
             def profile ='int'
             def secretkey = sh([script: "aws configure get aws_secret_access_key --profile ${profile} | xargs echo -n", returnStdout: true])
             def publickey = sh([script:"aws configure get aws_access_key_id --profile ${profile} | xargs echo -n",returnStdout: true])
-
-          sh '''cd common/ECSResourcesCheck/target
-                java -jar AWSFin-1.0-SNAPSHOT-jar-with-dependencies.jar ${Cluster} ${secretkey} ${publickey} ${region} "${baseJson}"
-         '''
+          sh """cd common/ECSResourcesCheck/target
+                java -jar ECSClusterComparison-1.0-SNAPSHOT-jar-with-dependencies.jar ${Cluster} ${publickey} ${secretkey} ${region} "${baseJson}"
+         """
          }}
 
     }
