--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -24,14 +24,15 @@ pipeline {
 
     stage('Compare ECS clusters') {
       steps {
-          script{
-            def profile ='int'
-            def secretkey = sh([script: "aws configure get aws_secret_access_key --profile ${profile} | xargs echo -n", returnStdout: true])
-            def publickey = sh([script:"aws configure get aws_access_key_id --profile ${profile} | xargs echo -n",returnStdout: true])
-          sh """cd common/ECSResourcesCheck/target
-                java -jar ECSClusterComparison-1.0-SNAPSHOT-jar-with-dependencies.jar ${Cluster} ${publickey} ${secretkey} ${region} '${baseJson}'
-         """
-         }}
-
+        withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'aws_folio_int', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]){
+            script {
+                def profile = 'int'
+                sh """cd common/ECSResourcesCheck/target
+                java -jar ECSClusterComparison-1.0-SNAPSHOT-jar-with-dependencies.jar ${Cluster} ${AWS_ACCESS_KEY_ID} ${AWS_SECRET_ACCESS_KEY} ${region} '$baseJson'
+                """
+            }
+        }
+      }
     }
-  }}
+  }
+}
