changes to JenkinsFile

--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -13,9 +13,12 @@ pipeline {
   stages {
     stage('Checkout Scm') {
       steps {
-        git 'https://github.com/folio-org/perf-testing/tree/PERF-427'
+        git 'https://github.com/folio-org/perf-testing/'
       }
     }
+    stage ('check ECS cluster - Checkout') {
+     	 checkout([$class: 'GitSCM', branches: [[name: '*/PERF-427']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: '', url: 'https://github.com/folio-org/perf-testing']]])
+    	}
 
     stage('Build Artifact') {
       steps {
