changes to JenkinsFile

--- a/common/ECSResourcesCheck/Jenkinsfile
+++ b/common/ECSResourcesCheck/Jenkinsfile
@@ -12,9 +12,9 @@ pipeline {
 
   stages {
     stage('Checkout Scm') {
-      steps {
-        git 'https://github.com/folio-org/perf-testing/'
-      }
+         steps {
+    	 checkout([$class: 'GitSCM', branches: [[name: '*/PERF-427']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: '', url: 'https://github.com/folio-org/perf-testing']]])
+         }
     }
     stage('Build Artifact') {
       steps {
