--- a/common/ECSResourcesCheck/pom.xml
+++ b/common/ECSResourcesCheck/pom.xml
@@ -62,6 +62,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <aws.sdk>1.11.214</aws.sdk>
+        <aws.sdk>1.12.524</aws.sdk> <!-- Updated version here -->
     </properties>
 </project>
